<resources>
    <string name="app_name">Electric Kiwi</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_save">Save</string>
    <string name="error_field_required">This field is required</string>
    <string name="set_hour">Set Hour</string>
    <string name="settings">Settings</string>
    <string name="crash_toast_text">Unexpected Error :(  An error report has been sent!</string>
    <string name="notification">Your Hour of Power starts at %s</string>
    <string name="notification_2">Touch to change hour</string>
    <string name="schedule">Schedule</string>
    <string name="done">Done</string>
</resources>
